# Axial

./: .gitignore  AGENTS.md  Instructions.md  README.txt  pyproject.toml
Context/: Extra AI_Game and benchmark info.md  Final Report of the AI overview.md  Final Report of the game overview.md  Project Proposal.md
Old/: Axial_3DMatrix.py  Axial_AI.py  Axial_BitBoard.py  Axial_BitBoard_Optimized.py  Axial_MCTS.py  Axial_MCTS_Optimized.py  Axial_RL_Guide.md  Axial_SelfPlay.py  Axial_SelfPlay_Optimized.py  Axial_SelfPlay_Parallel.py  Axial_info.md  project_axial_technical_spec.txt  test_stacking.py
Reports/: AI_Report.tex  Game_Report.tex
Training/: Axial_BitBoard_Fast.py  Axial_MCTS_Fast.py  Axial_MCTS_NN.py  Axial_Network.py  Axial_SelfPlay_Parallel.py  Axial_Train.py  Axial_Train_Adversarial.py  Axial_Train_old.py  play_axial.py  test_models.py  test_nn_vs_mcts.py  test_simple.py  train_validation.py
axial-web/: README.md  package.json  pnpm-lock.yaml
axial-web/apps/multiplayer-worker/: eslint.config.js  package.json  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
axial-web/apps/multiplayer-worker/scripts/: smoke-production.mjs
axial-web/apps/multiplayer-worker/src/: errors.ts  index.ts  roomCodes.ts  (+4 more)
axial-web/apps/web/: README.md  package.json  playwright.config.ts
dev/active/axial-web-rebuild/: classic-ai-research.md  context.md  deployment.md  multiplayer.md  next-session-prompt.md  plan.md  tasks.md  variant-modes.md
main/: README.txt  axial_ai_server.py  benchmark.py  bitboard.py  mcts.py  play_axial.py  test_simple.py
(+69 files in other folders)
